update tests, improve code
